fix alignment

--- a/assets/css/work.css
+++ b/assets/css/work.css
@@ -62,14 +62,14 @@ body{
   width: 100%;
   height: 50px;
   line-height: 50px;
-  background: white;
+  background: rgb(158, 154, 154);
   text-align: center;
 }
 
 /*** image ***/
 img{
   width: 100%;
-  height: 240px;  
+  height: 220px;  
 }
 
 img:hover{
